# listenr

./: .dockerignore  .env.example  .gitignore  Dockerfile  LIVE_STREAMING.md  README.md  asr.py  asr_processor.py  audio_recorder.py  build_dataset.py  config_manager.py  docker-compose.yml  listenr-web@.service  listenr_cli.py  llm_processor.py  main.py  monitor.py  processing_examples.md  pyproject.toml  requirements.txt  run_server.sh  storage.py  transcript_utils.py  unified_asr.py  utils.py  web_asr.py  webapp.py
.github/workflows/: tests.yml
docs/: configuration.md  dataset.md  finetune-amd.md  recording.md  setup.md  troubleshooting.md
prd/: dataset-manager-prd.md  prd.md
scripts/: setup-env.sh  test_merged.py
server/: README.md  app.py  app_stream.py  audio_utils.py  config.py  requirements.txt
server/templates/: index.html  index_visual.html
src/listenr/: __init__.py  build_dataset.py  cli.py  config_manager.py  constants.py  llm_processor.py  retranscribe.py  storage.py  transcript_utils.py  unified_asr.py
src/listenr/finetune/: __init__.py  data.py  merge.py  metrics.py  model.py  train.py
tests/: conftest.py  test_build_dataset.py  test_constants.py  test_finetune_data.py  test_finetune_merge.py  test_finetune_metrics.py  test_finetune_model.py  test_llm_processor.py  test_retranscribe.py  test_storage.py  test_transcript_utils.py
