[project]
name = "listenr"
version = "0.1.0"
description = "Real-time microphone transcription via Lemonade ASR"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests",
    "websockets",
    "sounddevice",
    "soundfile",
    "numpy",
    "scipy",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
py-modules = [
    "listenr_cli",
    "config_manager",
    "llm_processor",
    "storage",
    "transcript_utils",
    "unified_asr",
    "build_dataset",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
