[project]
name = "listenr"
version = "0.1.0"
description = "Real-time microphone transcription via Lemonade ASR"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests",
    "websockets",
    "sounddevice",
    "soundfile",
    "numpy",
    "scipy",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
finetune = [
    "transformers>=4.40",
    "peft>=0.11",
    "accelerate>=0.29",
    "datasets",
    "evaluate",
    "jiwer",
]

[project.scripts]
listenr = "listenr.cli:main"
listenr-build-dataset = "listenr.build_dataset:main"
listenr-finetune = "listenr.finetune.train:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
