[project]
name = "listenr"
version = "0.1.0"
description = "Real-time microphone transcription via Lemonade ASR"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests",
    "websockets",
    "sounddevice",
    "soundfile",
    "numpy",
    "scipy",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
finetune = [
    "transformers>=4.40",
    "peft>=0.11",
    "accelerate>=0.29",
    "datasets",
    "evaluate",
    "jiwer",
    "tensorboard",
]

[project.scripts]
listenr = "listenr.cli:main"
listenr-asr = "listenr.unified_asr:main"
listenr-build-dataset = "listenr.build_dataset:main"
listenr-finetune = "listenr.finetune.train:main"
listenr-merge = "listenr.finetune.merge:main"
listenr-retranscribe = "listenr.retranscribe:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
